@@ -1,3 +1,9 @@
+2010-05-13  Miguel de Dios  <miguel.dedios@artica.es>
+
+	* pandoradb.sql: fixed the syntax of sql for compatibility of mysql 5.0 that
+	this versión is used in Debian Lenny for example. Now run in 5.0 and next
+	versións.
+
 2010-05-13  Sergio Martin <sergio.martin@artica.es>
 
 	* include/functions_ui.php: Fixed negative timestamp 
